@@ -12,6 +12,7 @@ public class ServerContainer {
     public BooleanValue DISABLE_DEATH_IN_MAPS;
     public BooleanValue ONLY_REPAIR_IN_STATION;
     public BooleanValue LOG_REGISTRY_ENTRIES;
+    public BooleanValue DROP_PENALTY_ACTIVATES_IF_PLAYER_LEVEL_IS_LOWER;
 
     public BooleanValue ENABLE_CURRENCY_ITEMS_BREAKING_MODIFIED_ITEMS;
     public BooleanValue ENABLE_CURRENCY_ITEMS_INSTABILITY_SYSTEM;
@@ -22,6 +23,7 @@ public class ServerContainer {
     public IntValue CURRENCY_DROP_AFTER_LEVEL;
     public IntValue MAXIMUM_PLAYER_LEVEL;
     public IntValue MAXIMUM_ITEM_INSTABILITY;
+    public IntValue EXP_DROPS_PENALTY_LEVEL_DIFFERENCE_REQUIREMENT;
 
     public IntValue STARTING_SPELL_POINTS;
 
@@ -40,6 +42,9 @@ public class ServerContainer {
     ServerContainer(Builder builder) {
         builder.push("GENERAL");
 
+        DROP_PENALTY_ACTIVATES_IF_PLAYER_LEVEL_IS_LOWER = builder.comment(".")
+                .define("DROP_PENALTY_ACTIVATES_IF_PLAYER_LEVEL_IS_LOWER", true);
+
         STAT_POINTS_PER_LEVEL = builder.comment(".")
                 .translation("mmorpg.word.")
                 .defineInRange("STAT_POINTS_PER_LEVEL", 1D, 0, 100);
@@ -55,6 +60,10 @@ public class ServerContainer {
         STARTING_SPELL_POINTS = builder.comment(".")
                 .translation("mmorpg.word.")
                 .defineInRange("STARTING_SPELL_POINTS", 5, 0, Integer.MAX_VALUE);
+
+        EXP_DROPS_PENALTY_LEVEL_DIFFERENCE_REQUIREMENT = builder.comment(".")
+                .translation("mmorpg.word.")
+                .defineInRange("EXP_DROPS_PENALTY_LEVEL_DIFFERENCE_REQUIREMENT", 5, 0, Integer.MAX_VALUE);
 
         PLAYER_HEART_TO_HEALTH_CONVERSION = builder.comment(".")
                 .translation("mmorpg.word.")
