@@ -12,16 +12,19 @@ import net.minecraft.util.math.MathHelper;
 
 public class LootUtils {
 
-    static final int LEVEL_DISTANCE_PUNISHMENT_ACTIVATION = 5;
-
     // prevents lvl 50 players farming lvl 1 mobs
-    public static float ApplyLevelDistancePunishment(UnitData mob, UnitData player,
-                                                     float chance) {
+    public static float ApplyLevelDistancePunishment(UnitData mob, UnitData player, float chance) {
+
+        if (ModConfig.INSTANCE.Server.DROP_PENALTY_ACTIVATES_IF_PLAYER_LEVEL_IS_LOWER.get()) {
+            if (mob.getLevel() > player.getLevel()) {
+                return chance;
+            }
+        }
 
         int difference = Math.abs(player.getLevel() - mob.getLevel());
         int maxlvl = ModConfig.INSTANCE.Server.MAXIMUM_PLAYER_LEVEL.get();
 
-        if (difference > LEVEL_DISTANCE_PUNISHMENT_ACTIVATION) {
+        if (difference > ModConfig.INSTANCE.Server.EXP_DROPS_PENALTY_LEVEL_DIFFERENCE_REQUIREMENT.get()) {
 
             // if a high lvl player is killing higher than max lvl mobs
             if (player.getLevel() == maxlvl && mob.getLevel() > maxlvl) {
@@ -60,8 +63,8 @@ public class LootUtils {
                 lvlDuraPenalty = 0.2F;
             }
 
-            float dmgMulti = (float) RandomUtils.RandomRange(rar.SpawnDurabilityHit().Min, rar
-                    .SpawnDurabilityHit().Max) / (float) 100;
+            float dmgMulti = (float) RandomUtils.RandomRange(
+                    rar.SpawnDurabilityHit().Min, rar.SpawnDurabilityHit().Max) / (float) 100;
 
             dmgMulti += lvlDuraPenalty;
 
@@ -74,8 +77,7 @@ public class LootUtils {
         return stack;
     }
 
-    public static float applyLootMultipliers(float chance, UnitData mob,
-                                             LivingEntity entity) {
+    public static float applyLootMultipliers(float chance, UnitData mob, LivingEntity entity) {
 
         float first = chance;
 
