@@ -87,6 +87,8 @@ public class PacketRegister {
 
         reg(ParticlePacket.class, ParticlePacket::encode, ParticlePacket::decode, ParticlePacket::handle);
 
+        reg(BossPacket.class, BossPacket::encode, BossPacket::decode, BossPacket::handle);
+
     }
 
 }
