@@ -87,3 +87,4 @@ staffs and wands now need more energy and less mana.
 added config for logging registry entries like compatible items
 added config for setting specific dimension lvl 1 area in case spawn position is buggy or you have other needs
 base player stats are now in the folder for json configs. You can add any stat now.
+added configs for loot and xp penalty for level difference and if it should activate if player is lower lvl or just when higher lvl.
